# phantom

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  e2e_test.sh  install.ps1  install.sh  phantom-server.service
.github/workflows/: ci.yml  release.yml
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: audio_playback.rs  cursor.rs  decode_av1.rs  decode_h264.rs  decode_videotoolbox.rs  decode_zstd.rs  display_minifb.rs  display_winit.rs  file_transfer.rs  input_capture.rs  main.rs  transport_quic.rs  transport_tcp.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  clipboard.rs  color.rs  crypto.rs  decode.rs  display.rs  encode.rs  file_transfer.rs  frame.rs  input.rs  lib.rs  protocol.rs  stun.rs  tile.rs  transport.rs
crates/core/tests/: transport_tests.rs
crates/cred-provider-win/: Cargo.toml  phantom_cp.reg  phantom_cp_unregister.reg
crates/cred-provider-win/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/examples/: nvenc_bench.rs
crates/gpu/src/: cuda.rs  dl.rs  dxgi.rs  dxgi_nvenc.rs  lib.rs  nvdec.rs  nvenc.rs  nvfbc.rs  probe.rs  sys.rs
crates/gpu/tests/: probe_tests.rs
crates/pam-phantom/: Cargo.toml
crates/pam-phantom/src/: lib.rs
crates/phantom-sctp/: Cargo.toml
crates/phantom-sctp/src/: config.rs  lib.rs
crates/phantom-sctp/src/association/: mod.rs  state.rs  stream.rs  timer.rs
crates/phantom-sctp/src/chunk/: mod.rs
crates/phantom-sctp/src/endpoint/: mod.rs
crates/phantom-sctp/src/param/: mod.rs
crates/phantom-sctp/src/queue/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: audio_capture.rs  audio_capture_pulse.rs  audio_capture_wasapi.rs  capture_gdi.rs  capture_pipewire.rs  capture_scrap.rs  display_ccd.rs  doorbell.rs  encode_h264.rs  file_transfer.rs  input_injector.rs  input_uinput.rs  ipc_pipe.rs  lib.rs  main.rs  pipeline.rs  service_win.rs  session.rs  sso.rs  transport_quic.rs  transport_tcp.rs  transport_webrtc.rs  transport_ws.rs
crates/server/src/audio/: mod.rs  pulse.rs
crates/server/src/capture/: gdi.rs  mod.rs  pipewire.rs  scrap.rs
crates/server/src/encode/: h264.rs  mod.rs  zstd.rs
crates/server/src/transport/: mod.rs  quic.rs  webrtc.rs  ws.rs
crates/server/src/transport/webrtc/: backend_phantom.rs  backend_str0m.rs  sctp.rs
crates/server/tests/: e2e_headless.rs  multi_transport_test.rs  pipeline_test.rs  quic_test.rs  sctp_backpressure_test.rs  session_loop_test.rs  wan_test.rs
crates/server/web/: index.html
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs  pipeline.rs  server.rs  source.rs  viewer.html
crates/web/: Cargo.toml
crates/web/pkg/: phantom_web.js  phantom_web_bg.wasm
crates/web/src/: lib.rs
docs/: architecture.md  features.md  file-map.md  pitfalls.md  sso-plan.md  webrtc-redesign.md
docs/benchmarks/: 2026-04-20.md
docs/cloud-init/: phantom-server.yaml
phantom-idd/: BUILD.md  PhantomIDD.cpp  PhantomIDD.inf  PhantomIDD.vcxproj  README.md
tests/: e2e_mock.sh
