[package]
name = "phantom-client"
version = "0.2.0"
edition = "2021"

[dependencies]
phantom-core = { path = "../core" }
phantom-gpu = { path = "../gpu" }
anyhow = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
arboard = "3"
scrap = "0.5"
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
openh264 = "0.6"
dav1d = "0.10"
winit = "0.30"
softbuffer = "0.4"
# Audio playback (optional)
cpal = { version = "0.15", optional = true }
audiopus = { version = "0.3.0-rc.0", optional = true }

[features]
default = []
audio = ["cpal", "audiopus"]
