[package]
name = "phantom-core"
version = "0.4.10"
edition = "2021"

[features]
default = ["crypto"]
crypto = ["chacha20poly1305", "rand"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
chacha20poly1305 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
sha2 = "0.10"

[dev-dependencies]
bincode = "1"
anyhow = "1"
