[workspace]

[package]
name = "phantom_cp"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "phantom_cp"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_Security_Authentication_Identity",
]
