[package]
name = "phantom-gpu"
version = "0.4.2"
edition = "2021"

[features]
nvdec = []

[dependencies]
phantom-core = { path = "../core" }
anyhow = "1"
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    # IDXGIOutput::GetDesc requires Gdi feature (DXGI_OUTPUT_DESC embeds HMONITOR)
    "Win32_Graphics_Gdi",
] }
