[package]
name = "phantom-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["web-client"]
web-client = []  # embed WASM web client (requires wasm-pack build first)
webrtc = ["str0m"]  # WebRTC DataChannel transport (adds str0m + SCTP deps)
audio = ["libpulse-binding", "libpulse-simple-binding", "audiopus"]
wayland = ["dep:pipewire", "dep:dbus"]  # Wayland screen capture via PipeWire + XDG Portal

[dependencies]
phantom-core = { path = "../core" }
anyhow = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scrap = "0.5"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ring = "0.17"
tungstenite = "0.24"
str0m = { version = "0.18", optional = true }
serde_json = "1"
enigo = "0.3"
arboard = "3"
openh264 = "0.6"
phantom-gpu = { path = "../gpu" }
# Audio: PulseAudio capture + Opus encoding (optional, enabled by default on Linux)
libpulse-binding = { version = "2", optional = true }
libpulse-simple-binding = { version = "2", optional = true }
audiopus = { version = "0.3.0-rc.0", optional = true }
ctrlc = "3"
# Wayland screen capture (optional, Linux only)
pipewire = { version = "0.8", optional = true }
dbus = { version = "0.9", optional = true }
