[package]
name = "phantom-server"
version = "0.2.0"
edition = "2021"

[features]
default = ["web-client", "audio"]
web-client = []  # embed WASM web client (requires wasm-pack build first)
webrtc = ["str0m"]  # WebRTC DataChannel transport (adds str0m + SCTP deps)
audio = ["audiopus", "libpulse-binding", "libpulse-simple-binding", "windows"]  # Audio capture: PulseAudio on Linux, WASAPI on Windows
wayland = ["dep:pipewire", "dep:dbus"]  # Wayland screen capture via PipeWire + XDG Portal

[dependencies]
phantom-core = { path = "../core" }
anyhow = "1"
bincode = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scrap = "0.5"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
ring = "0.17"
tungstenite = "0.24"
str0m = { version = "0.18", optional = true }
serde_json = "1"
enigo = "0.3"
arboard = "3"
openh264 = "0.6"
phantom-gpu = { path = "../gpu" }
# Audio: Opus encoding (cross-platform)
audiopus = { version = "0.3.0-rc.0", optional = true }
ctrlc = "3"
# Wayland screen capture (optional, Linux only)
pipewire = { version = "0.8", optional = true }
dbus = { version = "0.9", optional = true }

# Linux: PulseAudio capture for audio feature
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2", optional = true }
libpulse-simple-binding = { version = "2", optional = true }

# Windows: WASAPI capture for audio feature
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", optional = true, features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
