[package]
name = "phantom-server"
version = "0.4.10"
edition = "2021"

[features]
default = ["web-client", "audio"]
web-client = []  # embed WASM web client (requires wasm-pack build first)
webrtc = ["str0m"]  # WebRTC DataChannel transport (adds str0m + SCTP deps)
audio = ["audiopus", "audiopus_sys", "libpulse-binding", "libpulse-simple-binding", "windows"]  # Audio capture: PulseAudio on Linux, WASAPI on Windows
wayland = ["dep:pipewire", "dep:dbus"]  # Wayland screen capture via PipeWire + XDG Portal

[dependencies]
phantom-core = { path = "../core" }
anyhow = "1"
base64 = "0.22"
bincode = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
scrap = "0.5"
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
ring = "0.17"
tungstenite = "0.24"
str0m = { version = "0.18", optional = true }
serde_json = "1"
enigo = "0.3"
arboard = "3"
openh264 = "0.6"
phantom-gpu = { path = "../gpu" }
# Audio: Opus encoding (cross-platform, static link to avoid libopus runtime dep)
audiopus = { version = "0.3.0-rc.0", optional = true }
audiopus_sys = { version = "0.2", optional = true, features = ["static"] }
ctrlc = "3"
# Wayland screen capture (optional, Linux only)
pipewire = { version = "0.8", optional = true }
dbus = { version = "0.9", optional = true }

# Linux: PulseAudio capture for audio feature, uinput for keyboard injection
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2", optional = true }
libpulse-simple-binding = { version = "2", optional = true }
# uinput virtual keyboard (bypasses XKB/XTest — Wayland + GDM login work)
evdev = "0.13"

# Windows: WASAPI capture for audio feature + Windows Service + Session management
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", optional = true, features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_StationsAndDesktops",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_Devices_Display",
] }
windows-service = "0.7"
