[package]
name = "phantom-stream"
version = "0.2.0"
edition = "2021"
description = "GPU streaming library — encode and stream any GPU framebuffer"

[dependencies]
phantom-core = { path = "../core" }
phantom-gpu = { path = "../gpu" }
anyhow = "1"
tracing = "0.1"
tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
