[package]
name = "phantom-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
phantom-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
bincode = "1"
ruzstd = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    # WebSocket
    "WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "ErrorEvent",
    # DOM
    "Window", "Location", "Navigator", "Clipboard",
    "Document", "HtmlElement", "HtmlCanvasElement", "CssStyleDeclaration",
    "CanvasRenderingContext2d", "ImageData",
    "Element", "DomRect",
    # Events
    "MouseEvent", "KeyboardEvent", "WheelEvent",
    "EventTarget", "Event", "AddEventListenerOptions",
]
