[package]
name = "phantom-web"
version = "0.5.8"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
phantom-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    # WebSocket
    "WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "ErrorEvent",
    # DOM
    "Window", "Location", "Navigator", "Clipboard",
    "Document", "HtmlElement", "HtmlCanvasElement", "CssStyleDeclaration",
    "HtmlVideoElement", "HtmlAudioElement", "HtmlMediaElement",
    "CanvasRenderingContext2d", "ImageData",
    "Element", "DomRect", "MediaStream", "MediaStreamTrack",
    # Events
    "MouseEvent", "PointerEvent", "KeyboardEvent", "WheelEvent",
    "EventTarget", "Event", "AddEventListenerOptions",
    # WebRTC DataChannel
    "RtcPeerConnection", "RtcConfiguration",
    "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcSdpType",
    "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelEvent", "RtcDataChannelType", "RtcDataChannelState",
    "RtcPeerConnectionIceEvent", "RtcIceCandidate", "RtcIceCandidateInit",
    "RtcRtpTransceiver", "RtcRtpTransceiverInit", "RtcRtpTransceiverDirection",
    # Fetch API (for POST /rtc)
    "Headers", "Request", "RequestInit", "Response",
    # Web Audio API
    "AudioContext", "AudioContextState", "AudioContextOptions",
    "AudioBuffer", "AudioBufferSourceNode",
    "AudioDestinationNode", "AudioNode",
    "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions",
    "BaseAudioContext",
    # Blob / URL for AudioWorklet inline module
    "Blob", "BlobPropertyBag", "Url",
    # MessagePort for worklet communication
    "MessagePort",
    # Drag & drop file transfer
    "DragEvent", "DataTransfer", "FileList", "File",
    # Web Crypto API (SHA-256 for file transfer)
    "Crypto", "SubtleCrypto",
    # Tab visibility (re-send resize when user switches back to Phantom tab)
    "VisibilityState",
    # performance.now() for visibility-recovery frame drop window
    "Performance",
]
